--- a/style.css
+++ b/style.css
@@ -54,6 +54,12 @@ body {
   background-color: var(--clr-neutral-100);
 }
 
+a,
+button,
+.hamburger {
+  cursor: pointer;
+}
+
 /* ---------- TYPOGRAPHY ----------*/
 
 
@@ -68,6 +74,38 @@ body {
 
 
 /* ---------- COMPONENTS ----------*/
+.hamburger {
+  display: block;
+}
+
+.bar {
+  display: block;
+  width: 2em;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+  background-color: var(--clr-neutral-400);
+}
+
+.hamburger.active .bar:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger.active .bar:nth-child(1) {
+  transform: translateY(.5rem) rotate(45deg);
+}
+
+.hamburger.active .bar:nth-child(3) {
+  transform: translateY(-.5rem) rotate(-45deg);
+}
+
+.nav-menu {
+  
+}
+
+
+
 /* .cta-btn {
   color: var(--clr-neutral-100);
   background-color: var(--clr-neutral-800);
